bug: adjust pseudo-elements width
pseudo-elements ::before and ::after where taking full vw, adding scrollbars to the page. Changed that to 100%.
Also, removed padding from body to keep page style from previous change, as padding will now be ruled by a wrapper div.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -296,7 +296,7 @@ header::before {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background-color: var(--bg-dark-section);
   z-index: -1;
@@ -307,7 +307,7 @@ header::before {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 100vw;
+  width: 100%;
   height: 100%;
   z-index: -1;
   background: repeating-linear-gradient(
@@ -348,9 +348,6 @@ header {
 }
 
 @media (max-width: 600px) {
-  body {
-    padding: 0 1rem;
-  }
   header {
     padding: 0 0.5rem;
 
